# Automated-DevSecOps-Pipeline-Security

./: README.md
devsecops-pipeline/: README.md  pyproject.toml  requirements.txt  setup.py
devsecops-pipeline/.github/workflows/: security-pipeline.yml
devsecops-pipeline/src/: orchestrator.py
devsecops-pipeline/src/config/: config.json  thresholds.json
devsecops-pipeline/src/modules/container/: trivy_scanner.py
devsecops-pipeline/src/modules/dependency/: safety_scanner.py
devsecops-pipeline/src/modules/iac/: checkov_scanner.py
devsecops-pipeline/src/modules/sast/: bandit_scanner.py  semgrep_scanner.py
devsecops-pipeline/src/modules/secrets/: detect_secrets_scanner.py
devsecops-pipeline/src/report/: generator.py
devsecops-pipeline/src/utils/: command_runner.py  json_helper.py
