[tool.poetry]
name = "devsecops-pipeline"
version = "0.1.0"
description = "An Automated DevSecOps Pipeline Security MVP"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bandit = "^1.7.0"
semgrep = "^0.70.0"
safety = "^1.10.3"
trivy = "^0.20.0"
checkov = "^2.0.0"
detect-secrets = "^1.0.3"
slack-sdk = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"